--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 :root {
+  font-family: "Neue Montreal", sans-serif;
   --menu-background: white;
   --light-font: white;
   --dark-font: rgb(44, 44, 44);
@@ -6,6 +7,17 @@
 
 .homepage-bg {
   background-image: url("/assets/images/HomePageBackground.jpg");
+}
+
+#logo {
+  max-width: 400px;
+  max-height: 400px;
+  object-fit: cover;
+}
+
+#logoBackground {
+  width: 100%;
+  max-height: 400px;
 }
 
 .alPastor-bg {
