added overlay/logo/and section classes

--- a/assets/css/cooking.css
+++ b/assets/css/cooking.css
@@ -5,7 +5,7 @@
     --dark-font: rgb(44, 44, 44);
 }  
 
-body{
+/* body{
 
 }
 
@@ -20,7 +20,7 @@ header.background {
     background-image: url(./images/ChipotleChickenBackground.jpg);
     border: 4px solid white;
     
-}
+} */
 
 
 
