added theme button and first swing at functionality.  Breaks the body class as it just removes the content and replaces it with the theme only.  Need to keep current tailwind css while updating theme.  The fight continues.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
 :root {
   font-family: "Neue Montreal", sans-serif;
-  --menu-background: white;
-  --light-font: white;
-  --dark-font: rgb(44, 44, 44);
+  --menu-background-light: white;
+  --menu-background-dark: rgb(44, 44, 44);
+  --light-font: rgb(44, 44, 44);
+  --dark-font: white;
 }
 
 .homepage-bg {
