--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@
   z-index: 1;
 }
 
-/* .modal {
+.modal {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -147,7 +147,7 @@
   padding: 10px 15px;
 }
 
-#overlay {
+#overlayModal {
   position: fixed;
   opacity: 0;
   transition: 200ms ease-in-out;
@@ -159,7 +159,7 @@
   pointer-events: none;
 }
 
-#overlay.active {
+#overlayModal.active {
   opacity: 1;
   pointer-events: all;
-} */
+} 
