--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,11 +155,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   pointer-events: none;
 }
 
 #overlayModal.active {
   opacity: 1;
   pointer-events: all;
-} 
+}
